[workspace]
members = [
]

[package]
name = "c_buffer_overflow_c2rust"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2018"
autobins = false

[lib]
name = "c_buffer_overflow_c2rust"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]


[[bin]]
path = "src/main.rs"
name = "main"

[dependencies]
libc = "0.2"



